--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "prepare": "husky install"
+    "deploy": "gh-pages -d build"
+    
+    
   },
   "eslintConfig": {
     "extends": [
